# antywirus

./: CMakeLists.txt  cipher  compare  compare.c  compare.h  database_operator  database_operator.c  database_operator.h  file_operator  file_operator.c  file_operator.h  grozny_wirus.txt  hasher  hasher.c  hasher.h  main  main.c  quarantine_cipher  quarantine_cipher.c  quarantine_cipher.h  quarantine_db.txt  test  test.c  virus.txt  vulnerability_db.txt
quarantine/: 1360779989ekstra_grozny_wirus.txt  1360779989grozny_wirus.txt  1360779989super_grozny_wirus.txt  1711465634virus.txt  973819900virus.txt
